objects/Jenkins_Job__c.object
<CustomObject>
    <description>Represents a job on a Jenkins CI build server.</description>
    <fields>
        <fullName>Path__c</fullName>
        <description>Represents a relative URL path to a job on a Jenkins CI build server.</description>
        <label>Path</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Release__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Represents a Sightline release.</description>
        <label>Release</label>
        <referenceTo>Release__c</referenceTo>
        <relationshipLabel>Jenkins Jobs</relationshipLabel>
        <relationshipName>Jenkins_Jobs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Token__c</fullName>
        <description>Represents an authentication token for a job on a Jenkins CI build server.</description>
        <label>Token</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Jenkins Job</label>
    <nameField>
        <label>Jenkins Job Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Jenkins Jobs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>